libpam-csc (1.1) unstable; urgency=low

  * Removed hardcoding of URI.

 -- David Bartley <dtbartle@csclub.uwaterloo.ca>  Fri, 27 Jul 2007 08:40:21 -0400

libpam-csc (1.0) unstable; urgency=low

  * Initial Release.

 -- David Bartley <dtbartle@csclub.uwaterloo.ca>  Sun, 24 Jun 2007 23:18:22 -0400