@@ -2,11 +2,11 @@ Source: libpam-csc
 Section: net
 Priority: optional
 Maintainer: David Bartley <dtbartle@csclub.uwaterloo.ca>
-Build-Depends: debhelper (>= 4.0.0), libldap-dev, libpam0g-dev
+Build-Depends: debhelper (>= 4.0.0), libldap2-dev, libpam0g-dev, libsasl2-dev
 Standards-Version: 3.7.2
 
 Package: libpam-csc
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: Custom CSC PAM module to handle account expiration.
- Custom CSC PAM module to handle account expiration.
+Description: CSC PAM module to handle account expiration.
+ CSC PAM module to handle account expiration.
